--- a/Project/css/basic_style.css
+++ b/Project/css/basic_style.css
@@ -27,6 +27,6 @@ h1 {
     height: 100px;
     margin: 5px;
     border: 1px solid black;
-    border-radius: 25px;
+    border-radius: 25%;
     cursor: pointer;
 }
