--- a/Project/css/basic_style.css
+++ b/Project/css/basic_style.css
@@ -36,7 +36,7 @@ h1 {
         SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
 ---------------------------------------------------------*/
 .squares:nth-child(-n+4) p{
-    font-family: "Helvetica Neue", Helvetica, Arial, Helvetica, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.5em;
     font-weight: 900;
     text-align: center;
