--- a/Project/css/shared.css
+++ b/Project/css/shared.css
@@ -142,3 +142,21 @@ row {
     z-index: 100;
     /*background-color:rgba(255, 255, 255, 0.5);*/
 }
+
+/*---------------------------------------------------------
+                    HOME SECTION STYLES
+---------------------------------------------------------*/
+#home {
+    background-color: url(../images/planets.jpg) no-repeat 50% 50%;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-backgorund-size: cover;
+    background-size: cover;
+    width: 100%;
+    display: block;
+    height: auto;
+    padding-top: 350px; /*This is spacer before the main title logo*/
+    padding-bottom: 500px; /*This is spacer after the main title logo*/
+    color: #fff;
+}
