--- a/Project/css/shared.css
+++ b/Project/css/shared.css
@@ -147,7 +147,7 @@ row {
                     HOME SECTION STYLES
 ---------------------------------------------------------*/
 #home {
-    background-color: url(../images/planets.jpg) no-repeat 50% 50%;
+    background: url(../images/planets.jpg) no-repeat 50% 50%;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
