--- a/One-Page-Website/css/one_page_website.css
+++ b/One-Page-Website/css/one_page_website.css
@@ -1,3 +1,19 @@
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
