created 2 columns and styling

--- a/Basic_HTML_and_CSS/challenges.css
+++ b/Basic_HTML_and_CSS/challenges.css
@@ -49,5 +49,15 @@ th {
 }
 .navbar a:hover {
     color: white;
+}
 
+.column {
+    float: left;
+    width: 50%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
