--- a/Basic_HTML_and_CSS/challenges.css
+++ b/Basic_HTML_and_CSS/challenges.css
@@ -1,4 +1,4 @@
-.center {
+.image {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -31,6 +31,38 @@ th {
     position: relative;
     text-align: center;
     color: white;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+
+.image-container:hover .overlay {
+    opacity: 1;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .centered {
@@ -71,3 +103,5 @@ p:hover {
     color: pink;
     cursor: pointer;
 }
+
+
