--- a/Basic_HTML_and_CSS/challenges.css
+++ b/Basic_HTML_and_CSS/challenges.css
@@ -3,6 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    height: auto;
     filter: grayscale(100%);
     border-radius: 10px;
 }
@@ -104,4 +105,10 @@ p:hover {
     cursor: pointer;
 }
 
+video {
+    height: auto;
+    width: 25%;
+    position: relative;
+    margin-bottom: 20px;
+}
 
