--- a/Portfolio/css/portfolio.css
+++ b/Portfolio/css/portfolio.css
@@ -225,3 +225,55 @@ footer {
     clear: both;
 }
 /****END OF TABLE STYLING****/
+
+/***** CONTACT FORM STYLING *****/
+/* input[type=text] targets all text input sections of the contact form */
+input[type=text] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: Perpetua, Rockwell Extra bold;
+}
+
+/*Hover effects for input boxes*/
+input[type=text]:hover {
+    box-shadow: 0 0 5px #00004d inset;
+}
+
+/*Submit Button*/
+input[type=submit] {
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Perpetua, Rockwell Extra Bold;
+}
+
+/*hover effect for submit button*/
+input[type=submit]:hover {
+    background-color: white;
+    color: black;
+    transform: scale(1.5);
+    transition: transform 1.5s;
+}
+
+/*Form Element*/
+form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
+    font-family: "Trebuchet MS", Optima;
+}
+
+/***END OF CONTACT FORM STYLING***/
