removed different bakcground color for home button

--- a/Portfolio/css/portfolio.css
+++ b/Portfolio/css/portfolio.css
@@ -138,7 +138,7 @@ footer {
 
 /* Navbar home button - disabled different coloring*/
 .navbar a.active {
-    background-color:;
+    background-color: none;
 }
 /***** END OF NAVBAR STYLING *****/
 
