--- a/One-Page-Website/css/one_page_website.css
+++ b/One-Page-Website/css/one_page_website.css
@@ -6,21 +6,22 @@
     padding: 0 8px;
 }
 
-.column {
-    float: left;
-    width: 25%;
-    padding: 5px;
-}
-
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
 
+.column {
+    float: left;
+    width: 25%;
+    padding: 5px;
+}
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
+    margin: 0;
 }
 
 form input[type="text"] {
